# integer_calculator

./: README.md  calculator  calculator.c  main
.github/checker/: meson.build
.github/checker/test/: test_addition.c  test_division.c  test_multiplication.c  test_negative_and_positive.c  test_positive_numbers.c  test_subtraction.c  test_two_negatives.c  test_zero_multiplication.c  test_zero_times_zero.c
calculator.dSYM/Contents/Resources/DWARF/: calculator
calculator.dSYM/Contents/Resources/Relocations/aarch64/: calculator.yml
multiplier.dSYM/Contents/: Info.plist
multiplier.dSYM/Contents/Resources/DWARF/: multiplier
multiplier.dSYM/Contents/Resources/Relocations/aarch64/: multiplier.yml
src/: calculator.c  main  main.c  multiplier.c  multiplier.h
